--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vuedraggable": "^2.24.0",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
