--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,8 @@
 Django==3.0.7
 django-cors-headers==3.4.0
-djangorestframework==3.11.0
+djangorestframework==3.12.2
+djangorestframework-simplejwt==4.6.0
+drf-yasg==1.20.0
+psycopg2-binary==2.8.5
+python-decouple==3.4
+ipython
